--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,25 +1,13 @@
-<p id="notice"><%= notice %></p>
+<% provide(:title, 'All users') %>
+<h1>All users</h1>
 
-<h1>Users</h1>
 
-<table>
-  <thead>
-  <tr>
-    <th>Name</th>
-    <th>Email</th>
-    <th colspan="3"></th>
-  </tr>
-  </thead>
-
-  <tbody>
+<ul class="users">
   <% @users.each do |user| %>
-      <tr>
-        <td><%= user.name %></td>
-        <td><%= user.email %></td>
-      </tr>
+      <li>
+        <%= gravatar_for user, size: 50 %>
+        <%= link_to user.name, user %>
+      </li>
   <% end %>
-  </tbody>
-</table>
-
-<br>
+</ul>
 
