--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,24 +5,41 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Help", help_path %></li>
-        <% if logged_in? %>
-            <li><%= link_to "Users", users_path %></li>
+        <% if customer_signed_in? %>
+            <li><%= link_to "Customers", customers_path %></li>
+            <% if logged_in? %>
+                <li><%= link_to "Users", users_path %></li>
+            <%end%>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 Account <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
-                <li><%= link_to "Profile", current_user %></li>
-                <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+
+                <li><%= link_to "Profile", current_customer   %></li>
+                <li><%= link_to "Settings", edit_customer_registration_path %></li>
                 <li class="divider"></li>
+
                 <li>
-                  <%= link_to "Log out", logout_path, method: :delete %>
+                <% if logged_in? %>
+                    <%= link_to "Log out User", logout_path, method: :delete %>
+                <% else %>
+                    <%= link_to "Log in User", login_path %>
+                <% end %>
+                  <%= link_to "Log out Customer", destroy_customer_session_path, method: :delete %>
                 </li>
               </ul>
             </li>
         <% else %>
-            <li><%= link_to "Log in", login_path %></li>
+            <% if logged_in? %>
+                <li><%= link_to "Log out User", logout_path, method: :delete %></li>
+            <% else %>
+                <li><%= link_to "Log in User", login_path %></li>
+            <% end %>
+            <li><%= link_to "Log in Customer", new_customer_session_path %></li>
         <% end %>
+
+
       </ul>
     </nav>
   </div>
