--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -29,7 +29,8 @@
     sample application.
   </h2>
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to "Sign up now! as User", new_user_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to "Sign up now! as Customer", new_customer_registration_path, class: "btn btn-lg btn-primary" %>
 </div>
 
 <img alt="Rails logo" src="/assets/rails.png" />
