--- a/app/views/customers/mailer/confirmation_instructions.html.erb
+++ b/app/views/customers/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,7 @@
-<p>Welcome <%= @email %>!</p>
+<p>Welcome <%= @email %> to our site!</p>
 
 <p>You can confirm your account email through the link below:</p>
 
-<p><%= link_to 'Confirm my account', new_customer_confirmation_url(@resource, confirmation_token: @token) %></p>
+
+<p><%= link_to 'Confirm my account', customer_confirmation_url( confirmation_token: @token) %></p>
+
